<resources>
    <string name="app_name">LwizApp</string>
    <string name="edit_note">Edit note</string>
    <string name="btn_tuner">Тюнер</string>
    <string name="btn_test">Тест</string>
    <string name="btn_notes">Заметки</string>

    <string name="greeting1">Добро рожаловать в приложение для настоящего короля рок-н-ролла!</string>
    <string name="greeting2">У вас в руках все самые необходимые инструменты поп-музыканта!</string>
    <string name="greeting3">
        Прежде чем начать работу с приложением, ознакомьтесь с его основными функциями.
    </string>

    <string name="tuner0">Гитарный тюнер</string>
    <string name="tuner1">Пусть ваш инструмент звучит идеально!</string>
    <string name="tuner2">Эта часть приложения поможет вам настроить гитару.</string>
    <string name="tuner3">
        При нажатии на струну, камертон издаст звук. Настройте инструмент на слух так,
        чтобы звук Вашей гитары совпал со звуком выбранной струны.
    </string>

    <string name="notes0">Заметки</string>
    <string name="notes1">Не позволяйте мыслям покидать Вас! Оставляйте заметки быстро и удобно.</string>
    <string name="notes2">Для того, чтобы создать заметку, нажмите кнопку "Плюс". В окне укажите тему и основной цвет. При желании можно выбрать нужный Вам цвет, нажав на палитру в верхнем меню. Сохраните заметку, нажав на дискету вверху экрана. Если вы захотите изменить или удалить заметку, удерживайте палец на заметке, после чего выберите нужное действие.</string>
    <string name="notes3">Можно отсортировать Ваши заметки в нужном порядке! Нажмите на три точки в правом верхнем углу и выберите тип сортировки.</string>

    <string name="test0">Тест-помощник</string>
    <string name="test1">Следите за своим здоровьем! Небольшой тест на наркозависимость.</string>
    <string name="test2">Пройдя небольшой тест, Вы сможете определить свою склонность к наркотической зависимости и получить небольшие советы.</string>
    <string name="test3">Для каждого вопроса выберите соответствуеющий ответ, нажав или оставив пустым соответствующий пункт. После ответа на все вопросы нажмите на кнопку "Завершить тестирование".</string>
</resources>
